--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -613,7 +613,7 @@
 
       <!-- Scrollable Table -->
       <div class="rounded-lg w-full inline-block whitespace-nowrap">
-        <table class="min-w-full text-xs border-collapse">
+        <table class="w-full border-collapse border border-gray-300 mt-4">
           <thead>
             <tr class="bg-gray-50">
               <th class="sticky left-0 px-1 py-1 border border-gray-300 border-b-gray-200 text-center">#</th>
