org filter border remove

--- a/src/app/features/organisation-section/components/customer/customer.component.html
+++ b/src/app/features/organisation-section/components/customer/customer.component.html
@@ -406,7 +406,7 @@
             <label class="block text-xs font-medium mb-1">Company Website</label>
 
             <input type="text" [(ngModel)]="companyWebsiteFilter" placeholder="Company Website" (input)="applyFilters()"
-              class="text-xs border border-gray-300 rounded px-2 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full" />
             <button *ngIf="companyWebsiteFilter" (click)="clearFilter('companyWebsiteFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -418,7 +418,7 @@
             <label class="block text-xs font-medium mb-1">Customer Email</label>
 
             <input type="text" [(ngModel)]="emailFilter" placeholder="Email" (input)="applyFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="emailFilter" (click)="clearFilter('emailFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -430,7 +430,7 @@
             <label class="block text-xs font-medium mb-1">Phone</label>
 
             <input type="text" [(ngModel)]="phoneFilter" placeholder="Phone" (input)="applyFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="phoneFilter" (click)="clearFilter('phoneFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -442,7 +442,7 @@
             <label class="block text-xs font-medium mb-1">Alternate Phone</label>
 
             <input type="text" [(ngModel)]="alternatePhoneFilter" placeholder="Alternate Phone" (input)="applyFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="alternatePhoneFilter" (click)="clearFilter('alternatePhoneFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -507,7 +507,7 @@
           <div class="relative flex-grow">
             <label class="block text-xs font-medium mb-1">City</label>
             <input type="text" [(ngModel)]="cityFilter" placeholder="City" (input)="applyFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="cityFilter" (click)="clearFilter('cityFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -519,7 +519,7 @@
           <div class="relative flex-grow">
             <label class="block text-xs font-medium mb-1">Description</label>
             <input type="text" [(ngModel)]="descriptionFilter" placeholder="Description" (input)="applyFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="descriptionFilter" (click)="clearFilter('descriptionFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
