--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -217,7 +217,7 @@
           <div class="relative flex-grow">
             <label class="block text-xs font-medium mb-1">Phase</label>
             <input type="text" [(ngModel)]="phaseNameFilter" (input)="applyPhaseFilters()" placeholder="Search Phase"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
           </div>
 
 
@@ -602,7 +602,7 @@
             <label class="block text-xs font-medium mb-1">Deliverable</label>
             <input type="text" [(ngModel)]="deliverableNameFilter" (input)="applyDeliverableFilters()"
               placeholder="Search Deliverable"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
           </div>
           <!-- Clear All Filters -->
           <button (click)="clearDeliverableFilters()"
@@ -1066,7 +1066,7 @@
             <label class="block text-xs font-medium text-gray-700 mb-1">Planned Start Date</label>
 
             <input type="date" [(ngModel)]="plannedStartDateFilter" (change)="applyProjectFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="plannedStartDateFilter" (click)="clearProjectFilter('plannedStartDateFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -1078,7 +1078,7 @@
             <label class="block text-xs font-medium text-gray-700 mb-1">Actual Start Date</label>
 
             <input type="date" [(ngModel)]="actualStartDateFilter" (change)="applyProjectFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="actualStartDateFilter" (click)="clearProjectFilter('actualStartDateFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -1090,7 +1090,7 @@
             <label class="block text-xs font-medium text-gray-700 mb-1">Tentative End Date</label>
 
             <input type="date" [(ngModel)]="tentativeEndDateFilter" (change)="applyProjectFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="tentativeEndDateFilter" (click)="clearProjectFilter('tentativeEndDateFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
@@ -1103,7 +1103,7 @@
 
             <input type="text" [(ngModel)]="projectDescriptionFilter" (input)="applyProjectFilters()"
               placeholder="Search Project Description"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
             <button *ngIf="projectDescriptionFilter" (click)="clearProjectFilter('projectDescriptionFilter')"
               class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
               ×
